Fix menu z-index
Fixes #66

--- a/src/content/css/tailwind.css
+++ b/src/content/css/tailwind.css
@@ -6,6 +6,15 @@
 @import "../../shared/vars.css";
 @source "../../shared";
 
+@theme {
+    --z-index-modal-bg: 100001;
+    --z-index-modal: 100002;
+    --z-index-alert-bg: 100011;
+    --z-index-alert: 100012;
+    --z-index-overlay-bg: 100021;
+    --z-index-overlay: 100022;
+}
+
 @layer theme {
     .preflight, .preflight::after, .preflight::before, .preflight::backdrop, .preflight *, .preflight ::after, .preflight ::before, .preflight ::backdrop, .preflight ::file-selector-button {
         box-sizing: border-box;
